trunk/lib/ocamerl: added ocamerl/eterm.mli; first attempt to add documentation generation

--- a/lib/ocamerl/TODO.txt
+++ b/lib/ocamerl/TODO.txt
@@ -1,6 +1,9 @@
 Logging:
 pa_log http://www.cs.nyu.edu/~cconway/tools/index.html
 
+Build:
+    * mlpack or mllib?
+
 Doc:
     * ocamlbuild ocamerl/eterm.inferred.mli
     * ocamldoc
