trunk/lib/ocamerl: added few TODO notes.
Squashed commit of the following:

commit 69bb20b86e261d0d925e80e5bab1005ca1e43d20
Author: Ludovic Coquelle <lcoquelle@gmail.com>
Date:   Tue Apr 8 23:40:50 2008 +0800

    trunk/lib/ocamerl: added few notes in TODO file.

--- a/lib/ocamerl/TODO.txt
+++ b/lib/ocamerl/TODO.txt
@@ -1,16 +1,15 @@
-Logging:
-pa_log http://www.cs.nyu.edu/~cconway/tools/index.html
-
 Build:
     * mlpack or mllib?
+    * what about a common lib (mainly eterm) usable for F#
 
 Doc:
     * ocamlbuild ocamerl/eterm.inferred.mli
-    * ocamldoc
 
 Test:
-    * unit-tests (OUnit)
-    * functional tests
+    * lot of unit-tests are missing
+
+Logging:
+    * pa_log http://www.cs.nyu.edu/~cconway/tools/index.html
 
 Look at:
     * event-based system 
