--- a/trunk/lib/ocamerl/TODO.txt
+++ b/trunk/lib/ocamerl/TODO.txt
@@ -15,7 +15,9 @@ Logging:
     * pa_log http://www.cs.nyu.edu/~cconway/tools/index.html
 
 Look at:
-    * ocamlnet/equeue
-    * jocaml
-    * ocaml-event (libevent) http://www.xs4all.nl/~mmzeeman/ocaml
-    * Ocaml-NAE (iom, cf) http://sourceforge.net/projects/ocnae
+    * Mbox could have a threaded version, a forked version (using pipe for communication), 
+    * socket / concurrency
+        * ocamlnet/equeue
+        * jocaml
+        * ocaml-event (libevent) http://www.xs4all.nl/~mmzeeman/ocaml
+        * Ocaml-NAE (iom, cf) http://sourceforge.net/projects/ocnae
